[package]
name = "bluer_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bluer = "0.13.0"
futures = "0.3.17"
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread"] }
env_logger = "0.9"